--- a/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_edit_profile.xml
@@ -2,9 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,66 +15,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05"/>
+            app:layout_constraintGuide_percent="0.05" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95"/>
+            app:layout_constraintGuide_percent="0.95" />
 
         <ImageView
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/layout_height_20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/layout_margintop_44dp"
             android:src="@drawable/img_back"
             app:layout_constraintLeft_toLeftOf="@id/g1"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/layout_margintop_44dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvEditprofile"
-            android:layout_width="@dimen/layout_width_116dp"
-            android:layout_height="@dimen/layout_height_32dp"
-            android:textSize="@dimen/textview_textsize_20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/textview_text_edit_profile"
-            app:layout_constraintTop_toBottomOf="@+id/imgBack"
+            android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintLeft_toLeftOf="@id/g1"
-            android:layout_marginTop="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/imgBack" />
 
         <ImageView
             android:id="@+id/imgAvatar"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:layout_constraintTop_toBottomOf="@id/tvEditprofile"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/img_avatar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/img_avatar"
-            android:layout_marginTop="20dp"/>
+            app:layout_constraintTop_toBottomOf="@id/tvEditprofile" />
 
         <TextView
             android:id="@+id/tvEditAvatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:text="@string/textview_text_edit_profile_picture"
+            android:textColor="@color/textview_color_account"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="12dp"
-            android:textColor="@color/textview_color_account"/>
+            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
         <TextView
             android:id="@+id/tvFullnameprofile"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tvEditAvatar"
+            android:layout_marginTop="@dimen/layout_margin_top"
             android:text="@string/textview_text_fullname"
             android:textSize="@dimen/textview_textsize_14sp"
-            android:layout_marginTop="@dimen/layout_margin_top"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            app:layout_constraintStart_toStartOf="@id/g1"/>
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/tvEditAvatar" />
 
         <EditText
             android:id="@+id/edtFullnameprofile"
@@ -82,77 +81,77 @@
             android:layout_height="wrap_content"
             android:hint="@string/edittext_hint_fullname"
             android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@+id/tvFullnameprofile"
+            android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/g2"
+            app:layout_constraintHorizontal_bias="0.333"
             app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/tvFullnameprofile"
             tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/tvBio"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/edtFullnameprofile"
+            android:layout_marginTop="@dimen/layout_margintop_20dp"
             android:text="@string/textview_text_bio"
             android:textSize="@dimen/textview_textsize_14sp"
-            android:layout_marginTop="@dimen/layout_margintop_20dp"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            app:layout_constraintStart_toStartOf="@id/g1"/>
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/edtFullnameprofile" />
 
         <EditText
             android:id="@+id/edtBio"
             android:layout_width="@dimen/layout_width_376dp"
             android:layout_height="wrap_content"
             android:hint="@string/edittext_hint_potato_master"
+            android:inputType="text"
+            android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/g2"
             app:layout_constraintHorizontal_bias="0.333"
             app:layout_constraintStart_toStartOf="@id/g1"
             app:layout_constraintTop_toBottomOf="@+id/tvBio"
-            android:inputType="text"
-            tools:ignore="Autofill"/>
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/tvPrivateInformation"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/edtBio"
+            android:layout_marginTop="@dimen/layout_margin_top"
             android:text="@string/edittext_text_private_information"
             android:textSize="16sp"
-            android:layout_marginTop="@dimen/layout_margin_top"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            app:layout_constraintStart_toStartOf="@id/g1"/>
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/edtBio" />
 
         <TextView
             android:id="@+id/tvEmaiiEdit"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tvPrivateInformation"
+            android:layout_marginTop="@dimen/layout_margintop_20dp"
             android:text="@string/textview_text_email"
             android:textSize="@dimen/textview_textsize_14sp"
-            android:layout_marginTop="@dimen/layout_margintop_20dp"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            app:layout_constraintStart_toStartOf="@id/g1"/>
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/tvPrivateInformation" />
 
         <EditText
             android:id="@+id/edtEmailedit"
             android:layout_width="@dimen/layout_width_376dp"
             android:layout_height="wrap_content"
             android:hint="@string/edittext_hint_user_email"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmaiiEdit"
+            android:inputType="text"
+            android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/g2"
             app:layout_constraintStart_toStartOf="@id/g1"
-            android:inputType="text"
-            tools:ignore="Autofill"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvEmaiiEdit"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/tvPhone"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/edtEmailedit"
+            android:layout_marginTop="@dimen/layout_margintop_20dp"
             android:text="@string/textview_text_phone"
             android:textSize="16sp"
-            android:layout_marginTop="@dimen/layout_margintop_20dp"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            app:layout_constraintStart_toStartOf="@id/g1"/>
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@+id/edtEmailedit" />
 
 
         <EditText
@@ -160,25 +159,27 @@
             android:layout_width="@dimen/layout_width_376dp"
             android:layout_height="wrap_content"
             android:hint="@string/edittext_hint_phone"
+            android:inputType="phone"
+            android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/g2"
             app:layout_constraintStart_toStartOf="@id/g1"
             app:layout_constraintTop_toBottomOf="@+id/tvPhone"
-            tools:ignore="Autofill"
-            android:inputType="phone"/>
+            tools:ignore="Autofill" />
 
         <Button
-            android:textColor="@color/textview_textcolor_white"
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnEditProfie"
             android:layout_width="@dimen/layout_width_376dp"
             android:layout_height="@dimen/layout_height_52dp"
-            app:layout_constraintStart_toStartOf="@id/g1"
-            app:layout_constraintEnd_toEndOf="@id/g2"
-            android:background="@drawable/button"
-            android:layout_marginBottom="@dimen/layout_marginbottom_32dp"
-            app:layout_constraintTop_toBottomOf="@id/edtPhone"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
-            android:text="@string/button_text_save_profile"/>
+            android:layout_marginBottom="@dimen/layout_marginbottom_32dp"
+            android:background="@drawable/button"
+            android:text="@string/button_text_save_profile"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/textview_textsize_20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/g2"
+            app:layout_constraintStart_toStartOf="@id/g1"
+            app:layout_constraintTop_toBottomOf="@id/edtPhone" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
