--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -79,11 +79,11 @@
             android:id="@+id/edtFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_fullname"
             android:inputType="text"
             android:textSize="@dimen/textview_textsize_20sp"
-            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-            android:layout_marginRight="@dimen/layout_marginright_20dp"
             app:layout_constraintEnd_toEndOf="@id/g3"
             app:layout_constraintStart_toStartOf="@id/g2"
             app:layout_constraintTop_toBottomOf="@+id/tvFullName"
@@ -103,10 +103,10 @@
             android:id="@+id/edtUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/edittext_hint_user_email"
-            android:inputType="text"
             android:layout_marginLeft="@dimen/layout_marginleft_20dp"
             android:layout_marginRight="@dimen/layout_marginright_20dp"
+            android:hint="@string/edittext_hint_user_email"
+            android:inputType="text"
             android:textSize="@dimen/textview_textsize_20sp"
             app:layout_constraintEnd_toEndOf="@id/g3"
             app:layout_constraintStart_toStartOf="@id/g2"
@@ -128,11 +128,11 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:hint="@string/edittext_hint_password"
             android:inputType="textPassword"
             android:textSize="@dimen/textview_textsize_20sp"
-            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-            android:layout_marginRight="@dimen/layout_marginright_20dp"
             app:layout_constraintEnd_toEndOf="@id/g3"
             app:layout_constraintStart_toStartOf="@id/g2"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword"
@@ -140,9 +140,11 @@
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="@dimen/layout_width_376dp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/layout_height_52dp"
+            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
             android:layout_marginTop="@dimen/layout_margintop_20dp"
+            android:layout_marginRight="@dimen/layout_marginright_20dp"
             android:background="@drawable/button"
             android:text="@string/button_text_create_account"
             android:textColor="@android:color/white"
