--- a/app/src/at-uyennguyen/res/layout/activity_food_item.xml
+++ b/app/src/at-uyennguyen/res/layout/activity_food_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/imgEllipsis"
@@ -63,6 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/imgHeart" />
 
     <TextView
+        tools:text="abcjshdiw"
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
